# dummyrepo

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: test_unit.yaml
src/classification/: dataset.py  neuralnetwork.py  tool.py
tests/: test_dataset.py  test_neuralnetwork.py
